--- a/book/book.tex
+++ b/book/book.tex
@@ -764,7 +764,7 @@ Kuang He, Wei Huang, Karen Barber y Eric Ransom.
 El objetivo de este libro es enseñarte a pensar como un informático. Esta forma
 de pensar combina algunas de las mejores características de las matemáticas,
 la ingeniería y las ciencias naturales.  Al igual que los matemáticos, los
-informáticos usan lenguajes formales para denotar ideas (específicamente,
+informáticos utilizan lenguajes formales para denotar ideas (específicamente,
 computaciones). Al igual que los ingenieros, diseñan cosas, ensamblando
 componentes en sistemas y evaluando compensasiones entre alternativas.
 Al igual que los científicos, observan el comportamiento de sistemas complejos,
@@ -816,7 +816,7 @@ alguna variación.
 \end{description}
 
 Lo creas o no, eso es prácticamente todo lo que hay.  Cada
-programa que has usado, no importa cuán complicado, está compuesto de
+programa que has utilizado, no importa cuán complicado, está compuesto de
 instrucciones que se parecen mucho a estas.  Así que puedes pensar en
 la programación como el proceso de separar una tarea grande y compleja en
 subtareas cada vez más pequeñas, hasta que cada subtarea sea lo suficientemente
@@ -922,7 +922,7 @@ a las funciones en el Capítulo~\ref{funcchap}.
 \index{función} \index{función print}
 
 En Python 2, la sentencia print es un poco diferente; no es
-una función, así que no usa paréntesis.
+una función, así que no utiliza paréntesis.
 \index{Python 2}
 
 \begin{verbatim}
@@ -1160,7 +1160,7 @@ más aún: \index{poesía} \index{prosa}
 
 \begin{description}
 
-\item[Poesía:] Las palabras se usan por su sonido tanto como por
+\item[Poesía:] Las palabras se utilizan por su sonido tanto como por
 su significado y todo el poema junto crea un efecto o
 respuesta emocional.  La ambigüedad no solo es común sino a menudo
 deliberada.
@@ -1217,7 +1217,7 @@ para comprender el panorama general.
 
 Tu trabajo es ser un buen jefe: encontrar maneras de aprovechar las
 fortalezas y mitigar las debilidades.  Y encontrar maneras
-de usar tus emociones para abordar el problema,
+de utilizar tus emociones para abordar el problema,
 sin dejar que tus reacciones interfieran en tu capacidad
 de trabajar eficazmente.
 
@@ -1341,7 +1341,7 @@ de los paréntesis, o ambos?
 \item Si estás intentando imprimir una cadena con print, ¿qué ocurre si
 omites una de las comillas, o ambas?
 
-\item Puedes usar un signo menos para hacer un número negativo como
+\item Puedes utilizar un signo menos para hacer un número negativo como
 {\tt -2}.  ¿Qué ocurre si pones un signo más antes de un número?
 ¿Qué pasa con {\tt 2++2}?
 
@@ -1438,7 +1438,7 @@ Es legal utilizar letras mayúsculas, pero es convencional
 utilizar solo minúsculas para los nombres de variables.
 
 El guión bajo, \verb"_", puede aparecer en un nombre.
-A menudo se usa en nombres con varias palabras, tales como
+A menudo se utiliza en nombres con varias palabras, tales como
 \verb"tu_nombre" o \verb"velocidad_de_golondrina_sin_carga".
 \index{guión bajo}
 
@@ -1978,7 +1978,7 @@ colección de funciones relacionadas entre sí.
 \index{module}
 \index{module object}
 
-Antes de que podamos usar las funciones de un módulo, tenemos que importarlo con
+Antes de que podamos utilizar las funciones de un módulo, tenemos que importarlo con
 una {\bf sentencia import}:
 
 \begin{verbatim}
@@ -2007,9 +2007,9 @@ Este formato se llama {\bf notación de punto}.
 >>> altura = math.sin(radianes)
 \end{verbatim}
 %
-El primer ejemplo usa \verb"math.log10" para calcular
+El primer ejemplo utiliza \verb"math.log10" para calcular
 una relación señal/ruido en decibeles (suponiendo que \verb"potencia_senal" y
-\verb"potencia_ruido" están definidas).  El módulo math también proporciona {\tt log},
+\verb"potencia_ruido" están definidas).  El módulo math también proporciona a {\tt log},
 que calcula logaritmos en base {\tt e}.
 \index{función log}
 \index{log!función}
@@ -2087,7 +2087,7 @@ SyntaxError: can't assign to operator
 
 \section{Agregar nuevas funciones}
 
-Hasta aquí, solo hemos estado usando las funciones que vienen con Python,
+Hasta aquí, solo hemos estado utilizando las funciones que vienen con Python,
 pero también es posible agregar nuevas funciones.
 Una {\bf definición de función} especifica el nombre de una nueva función y
 la secuencia de sentencias que se ejecutan cuando la función es llamada.
@@ -2107,7 +2107,7 @@ def imprimir_letra():
 de función. El nombre de la función es \verb"imprimir_letra".  Las
 reglas para los nombres de funciones son las mismas que para los nombres de variables: las letras,
 los números y el guión bajo son legales, pero el primer carácter
-no puede ser un número.  No puedes usar una palabra clave como nombre de una función,
+no puede ser un número.  No puedes utilizar una palabra clave como nombre de una función,
 y deberías evitar tener una variable y una función con el mismo
 nombre.
 \index{palabra clave def}
@@ -2130,7 +2130,7 @@ cualquier número de sentencias.
 
 Las cadenas en las sentencias print están encerradas en comillas
 dobles.  Las comillas simples y las comillas dobles hacen lo mismo;
-la mayoría de la gente usa comillas simples excepto en casos como este donde
+la mayoría de la gente utiliza comillas simples excepto en casos como este donde
 una comilla simple (que también es un apóstrofe) aparece en la cadena.
 
 Todas las comillas (simples y dobles)
@@ -2152,7 +2152,7 @@ no está completa:
 %
 Para terminar una función, tienes que insertar una línea vacía.
 
-Al definir una función se crea un {\bf objeto de función}, que tiene
+Al definir una función, se crea un {\bf objeto de función} que tiene
 tipo \verb"function":
 \index{tipo function}
 \index{function!tipo}
@@ -2173,7 +2173,7 @@ I'm a lumberjack, and I'm okay.
 I sleep all night and I work all day.
 \end{verbatim}
 %
-Una vez que hayas definido una función, puedes usarla dentro de otra
+Una vez que hayas definido una función, puedes utilizarla dentro de otra
 función.  Por ejemplo, para repetir el estribillo anterior, podríamos escribir
 una función llamada \verb"repetir_letra":
 
@@ -2193,7 +2193,7 @@ I'm a lumberjack, and I'm okay.
 I sleep all night and I work all day.
 \end{verbatim}
 %
-Pero así no es realmente como sigue la canción.
+Pero así no es como sigue la canción realmente.
 
 
 \section{Definiciones y usos}
@@ -2238,7 +2238,7 @@ y mueve la definición de \verb"imprimir_letra" a después de la definición de
 \section{Flujo de ejecución}
 \index{flujo de ejecución}
 
-Para estar seguro de que una función está definida antes de su primer uso,
+Para asegurarte de que una función está definida antes de su primer uso,
 tienes que conocer el orden en que se ejecutan las sentencias, lo cual se
 llama {\bf flujo de ejecución}.
 
@@ -2297,7 +2297,7 @@ Esta función asigna el argumento a un parámetro
 con nombre {\tt bruce}.  Cuando la función es llamada, esta imprime el valor del
 parámetro (sea lo que sea) dos veces.
 
-Esta función puede usarse con cualquier valor que se pueda imprimir.
+Esta función puede utilizarse con cualquier valor que se pueda imprimir.
 
 \begin{verbatim}
 >>> impr_2veces('Spam')
@@ -2312,7 +2312,7 @@ Spam
 \end{verbatim}
 %
 Las mismas reglas de composición que se aplican a las funciones incorporadas también
-se aplican a las funciones definidas por el programador, así que podemos usar cualquier tipo de expresión
+se aplican a las funciones definidas por el programador, así que podemos utilizar cualquier tipo de expresión
 como un argumento para \verb"impr_2veces":
 \index{composición}
 \index{función definida por el programador}
@@ -2332,7 +2332,7 @@ en los ejemplos las expresiones \verb"'Spam '*4" y
 {\tt math.cos(math.pi)} son evaluadas una sola vez.
 \index{argumento}
 
-También puedes usar una variable como un argumento:
+También puedes utilizar una variable como un argumento:
 
 \begin{verbatim}
 >>> michael = 'Eric, the half a bee.'
@@ -2363,7 +2363,7 @@ def cat_2veces(parte1, parte2):
 \end{verbatim}
 %
 Esta función toma dos argumentos, los concatena e imprime
-el resultado dos veces.  Aquí hay un ejemplo que la usa:
+el resultado dos veces.  Aquí hay un ejemplo que la utiliza:
 \index{concatenation}
 
 \begin{verbatim}
@@ -2396,7 +2396,7 @@ tal cosa como {\tt bruce}.
 \index{marco de una función}
 \index{frame}\index{marco}
 
-Para hacer un seguimiento de qué variables se pueden usar en qué lugar, a veces es
+Para hacer un seguimiento de qué variables se pueden utilizar en qué lugar, a veces es
 útil dibujar un {\bf diagrama de pila} (en inglés, {\em stack diagram}).  Al igual que los diagramas de estado,
 los diagramas de pila muestran el valor de cada variable, pero también muestran la
 función a la cual pertenece cada variable.
@@ -2430,7 +2430,7 @@ correspondiente.  Así que, {\tt parte1} tiene el mismo valor que
 {\tt linea1}, {\tt parte2} tiene el mismo valor que {\tt linea2}
 y {\tt bruce} tiene el mismo valor que {\tt cat}.
 
-Si ocurre un error durante una llamada de función, Python imprime el
+Si ocurre un error durante una llamada a función, Python imprime el
 nombre de la función, el nombre de la función que la llamó
 y el nombre de la función que llamó a {\em esa}, todo el
 camino de vuelta a \verb"__main__".
@@ -2466,7 +2466,7 @@ ejecutando actualmente está al final.
 \index{productiva!función}
 \index{nula!función}
 
-Algunas de las funciones que hemos usado, tales como las funciones matemáticas, devuelven
+Algunas de las funciones que hemos utilizado, tales como las funciones matemáticas, devuelven
 resultados; por falta de un mejor nombre, las llamo {\bf funciones
   productivas}.  Otras funciones, como \verb"impr_2veces", realizan una
 acción pero no devuelven un valor.  Son llamadas {\bf funciones
@@ -2474,7 +2474,7 @@ acción pero no devuelven un valor.  Son llamadas {\bf funciones
 
 Cuando llamas a una función productiva, casi siempre
 quieres hacer algo con el resultado; por ejemplo, podrías
-asignarlo a una variable o usarlo como parte de una expresión:
+asignarlo a una variable o utilizarlo como parte de una expresión:
 
 \begin{verbatim}
 x = math.cos(radianes)
@@ -2531,7 +2531,7 @@ a escribir funciones productivas en unos capítulos más adelante.
 
 
 \section{¿Por qué funciones?}
-\index{función!razones para usar una}
+\index{función!razones para utilizar una}
 
 Puede que no esté claro por qué vale la pena el problema de dividir
 un programa en funciones.  Hay muchas razones:
@@ -2549,7 +2549,7 @@ que hacerlo en un lugar.
 partes una a la vez y luego reunirlas en un todo funcional.
 
 \item Las funciones bien diseñadas son a menudo útiles para muchos programas.
-Una vez que escribes y depuras una, la puedes reusar.
+Una vez que escribes y depuras una, la puedes reutilizar.
 
 \end{itemize}
 
@@ -2586,7 +2586,7 @@ depurándolas a medida que avanzas.
 
 Por ejemplo, Linux es un sistema operativo que contiene millones de
 líneas de código, pero comenzó como un programa simple que Linus Torvalds
-usaba para explorar el chip Intel 80386.  Según Larry Greenfield,
+utilizaba para explorar el chip Intel 80386.  Según Larry Greenfield,
 ``Uno de los proyectos anteriores de Linus era un programa que cambiaría
 entre imprimir AAAA y BBBB.  Esto evolucionó más tarde a Linux.''
 ({\em The Linux Users' Guide} Beta Version 1).
@@ -2617,7 +2617,7 @@ de función.
 \item[cuerpo:] La secuencia de sentencias dentro de una definición de función.
 \index{cuerpo}
 
-\item[parámetro:] Un nombre usado dentro de una función para referirse al valor
+\item[parámetro:] Un nombre utilizado dentro de una función para referirse al valor
 pasado como argumento.
 \index{parámetro}
 
@@ -2631,11 +2631,11 @@ Este valor es asignado al parámetro correspondiente en la función.
 \index{argumento}
 
 \item[variable local:]  Una variable definida dentro de una función. Una variable
-local solo puede usarse dentro de su función.
+local solo puede utilizarse dentro de su función.
 \index{variable local}
 
 \item[valor de retorno:]  El resultado de una función.  Si una llamada a función
-se usa como expresión, el valor de retorno es el valor de
+se utiliza como expresión, el valor de retorno es el valor de
 la expresión.
 \index{valor de retorno}
 
@@ -2707,7 +2707,7 @@ de la pantalla.
                                                                  monty
 \end{verbatim}
 
-Pista: usa la repetición de cadenas y la concatenación.  Además,
+Pista: utiliza la repetición de cadenas y la concatenación.  Además,
 Python proporciona una función incorporada llamada {\tt len} que
 devuelve la longitud de una cadena, por lo que el valor de \verb"len('monty')" es 5.
 
@@ -2728,7 +2728,7 @@ def hacer_2veces(f):
     f()
 \end{verbatim}
 
-Aquí hay un ejemplo que usa \verb"hacer_2veces" para llamar a una función
+Aquí hay un ejemplo que utiliza \verb"hacer_2veces" para llamar a una función
 con nombre \verb"imprimir_spam" dos veces.
 
 \begin{verbatim}
@@ -2769,7 +2769,7 @@ Solution: \url{http://thinkpython2.com/code/do_four.py}.
 \begin{exercise}
 
 Nota: Este ejercicio debería hacerse
-usando solo las sentencias y otras características que hemos aprendido hasta
+utilizando solo las sentencias y otras características que hemos aprendido hasta
 ahora.
 
 \begin{enumerate}
@@ -2831,9 +2831,9 @@ Este capítulo presenta un estudio de caso que demuestra un proceso para
 diseñar funciones que interactúen entre sí.
 
 Se presenta el módulo {\tt turtle}, el cual te permite
-crear imágenes usando gráficas tortuga.  El módulo {\tt turtle}
+crear imágenes utilizando gráficas tortuga.  El módulo {\tt turtle}
 está incluido en la mayoría de las instalaciones de Python, pero si estás ejecutando Python
-usando PythonAnywhere, no podrás ejecutar los ejemplos de tortuga (al
+utilizando PythonAnywhere, no podrás ejecutar los ejemplos de tortuga (al
 menos no podías cuando escribí esto).
 
 Si ya has instalado Python en tu computador, deberías
@@ -7190,7 +7190,7 @@ pero no lo están).
 
 En general, las pruebas pueden ayudarte a encontrar errores, pero no es fácil
 generar un buen conjunto de casos de prueba, e incluso si lo haces, no puedes
-estar seguro de que tu programa está correcto.
+asegurarte de que tu programa está correcto.
 De acuerdo al legendario informático:
 \index{prueba!y ausencia de errores}
 
@@ -12560,7 +12560,7 @@ que no existe, obtienes un {\tt AttributeError}:
 AttributeError: Point instance has no attribute 'z'
 \end{verbatim}
 %
-Si no estás seguro de qué tipo es un objeto, puedes consultar:
+Si no sabes bien qué tipo es un objeto, puedes consultar:
 \index{función type}
 \index{type!función}
 
@@ -12579,7 +12579,7 @@ es una instancia de una clase:
 True
 \end{verbatim}
 %
-Si no estás seguro de si un objeto tiene un atributo particular,
+Si no sabes bien si un objeto tiene un atributo particular,
 puedes utilizar la función incorporada {\tt hasattr}:
 \index{función hasattr}
 \index{hasattr!función}
@@ -13775,7 +13775,7 @@ inicializar todo lo de un atributo de un objeto en el método init.
 \index{método init}
 \index{inicializar!atributo}
 
-Si no estás seguro de si un objeto tiene un atributo en particular,
+Si no sabes bien si un objeto tiene un atributo en particular,
 puedes utilizar la función incorporada {\tt hasattr} (ver Sección~\ref{hasattr}).
 \index{función hasattr}
 \index{hasattr!función}
@@ -15807,7 +15807,7 @@ podría ser porque tú y el intérprete no están mirando el mismo
 código.  Revisa tu entorno de programación para asegurarte de que el
 programa que estás editando es el que Python está intentando ejecutar.
 
-Si no estás seguro, intenta poniendo un error de sintaxis obvio y deliberado
+Si no sabes bien, intenta poniendo un error de sintaxis obvio y deliberado
 al principio del programa.  Ahora ejecútalo de nuevo.  Si el
 intérprete no encuentra el nuevo error, no estás ejecutando el
 código nuevo.
@@ -15960,7 +15960,7 @@ hacia el caso base, obtendrás algunas ideas sobre por qué no ocurre.
 \subsubsection{Flujo de ejecución}
 \index{flujo de ejecución}
 
-Si no estás seguro de cómo se está moviendo el flujo de ejecución a través
+Si no sabes bien cómo se está moviendo el flujo de ejecución a través
 de tu programa, agrega sentencias {\tt print} al principio de cada
 función con un mensaje como ``entrando a la función {\tt foo}'', donde
 {\tt foo} es el nombre de la función.
@@ -16221,7 +16221,7 @@ que el orden de evaluación sea explícito:
  y = x / (2 * math.pi)
 \end{verbatim}
 %
-Siempre que no estés seguro del orden de evaluación, usa
+Siempre que no sepas bien del orden de evaluación, usa
 paréntesis.  No solo estará correcto el programa (en el sentido
 de hacer lo que pretendías), también será más legible para
 otras personas que no han memorizado el orden de las operaciones.
